# diffsync-mock

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
diffsync_mock/: build.py  const.py  local_adapter.py  main.py  models.py  redis_adapter.py
